--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -11,6 +11,9 @@ jobs:
           cache: yarn
       - name: yarn install for caller's PR
         run: yarn install
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.1'
 
       - name: Get coverage for caller's PR
         run: |
