--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -43,7 +43,7 @@ jobs:
         id: find-comment
         with:
           issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'code-coverage[bot]'
+          comment-author: 'github-actions[bot]'
           body-includes: |
             Code coverage report for PR #${{ github.event.pull_request.number }}
 
