--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.1'
+      - name: generate go for github.com/grafana/grafana
+        if: github.repository == 'grafana/grafana'
+        run: make gen-go
 
       - name: Get coverage for caller's PR
         run: |
@@ -26,6 +29,10 @@ jobs:
           ref: main
       - name: yarn install for caller's main
         run: yarn install
+      - name: generate go for github.com/grafana/grafana
+        if: github.repository == 'grafana/grafana'
+        run: make gen-go
+
 
       - name: Get coverage on caller's main
         run: |
