--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -3,6 +3,8 @@ on: workflow_call
 jobs:
   comment-coverage-difference:
     runs-on: ubuntu-latest
+    # Check if the event is not triggered by a fork TODO: find a way to manually trigger workflow for forks
+    if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
@@ -13,12 +15,14 @@ jobs:
         run: yarn install
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.1'
+          go-version: '1.17.8'
 
-      - name: Get coverage for caller's PR
+      - name: Get go coverage for caller's PR
         run: |
           go test -v -coverpkg=./... -coverprofile=profile.cov ./...
           echo "go-pr-cov=$(go tool cover -func profile.cov | grep total: | awk '{print substr($NF,1,length($NF)-1)}')" >> $GITHUB_ENV
+      - name: Get TypeScript coverage for caller's PR
+        run: |
           echo "ts-pr-cov=$(yarn test:coverage | grep 'All files' | awk '{print $10}')" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
@@ -27,10 +31,13 @@ jobs:
       - name: yarn install for caller's main
         run: yarn install
 
-      - name: Get coverage on caller's main
+      - name: Get go coverage on caller's main
         run: |
           go test -v -coverpkg=./... -coverprofile=profile.cov ./...
           echo "go-main-cov=$(go tool cover -func profile.cov | grep total: | awk '{print substr($NF,1,length($NF)-1)}')" >> $GITHUB_ENV
+
+      - name: Get TypeScript coverage on caller's main
+        run: |
           echo "ts-main-cov=$(yarn test:coverage | grep 'All files' | awk '{print $10}')" >> $GITHUB_ENV
 
       - name: Calculate coverage difference
