--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -32,11 +32,56 @@ jobs:
       - name: Get go coverage for caller's PR
         id: pr-backend
         run: |
-          echo "::set-output name=coverage::$(./scripts/ci-code-coverage.sh false "${{steps.relevant-paths.outputs.backend-paths}}")"
+          PATHS=${{ steps.relevant-paths.outputs.backend-paths }}
+          ## Create directory for backend coverage output
+          mkdir backend_coverage
+          CMD=('go' 'test' '-coverprofile')
+          PLUGIN_COVERAGE=""
+          for i in "${!PATHS[@]}"; do
+              ## Identify plugin
+              PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+              echo "Running backend coverage check for: $PLUGIN"
+              FULL_CMD="${CMD[*]} backend_coverage/$PLUGIN.cov ./${PATHS[i]}"
+              ## This command generates the HTML report
+              HTML_CMD=('go' 'tool' 'cover' "-html=backend_coverage/$PLUGIN.cov" "-o backend_coverage/$PLUGIN.html")
+              RESULT=$($FULL_CMD)
+              $(${HTML_CMD[*]})
+              ## Retrieve coverage from result
+              PLUGIN_COVERAGE="$PLUGIN_COVERAGE$PLUGIN | $(echo $RESULT | cut -d ':' -f 2 | grep -Eo '[0-9]+\.[0-9]+') + "
+          done
+          echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
       - name: Get TypeScript coverage for caller's PR
         id: pr-frontend
         run: |
-          echo "::set-output name=coverage::$(./scripts/ci-code-coverage.sh true "${{steps.relevant-paths.outputs.frontend-paths}}")"
+          PATHS=${{ steps.relevant-paths.outputs.frontend-paths }}
+          ## Coverage paths are slightly differently formatted compared to test paths
+          COVERAGE_PATHS=""
+          declare -a TEST_PATHS=()
+          CMD=('jest' '--coverage' '--collectCoverageFrom=')
+          for i in "${!PATHS[@]}"; do
+              ## Identify which plugin path has been passed in
+              PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+              echo "Running frontend coverage check for: $PLUGIN"
+              ## If this is the last element do not append a comma
+              if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
+                  COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\","
+              else
+                  COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\""
+              fi
+              TEST_PATHS+=("--testPathPattern=\"${PATHS[i]}/*\"")
+          done
+          FULL_CMD="${CMD[*]}'[$COVERAGE_PATHS]' ${TEST_PATHS[*]}"
+          RESULT=$(yarn exec $FULL_CMD)
+
+          PLUGIN_COVERAGE=""
+          ## Set field delimiter so that we can easily split the path
+          IFS='/'
+          for i in "${!PATHS[@]}"; do
+              read -a splitpath <<<${PATHS[i]}
+              ## Retrive line coverage from result
+              PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
+          done
+          echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
 
       - uses: actions/checkout@v3
         with:
@@ -50,12 +95,56 @@ jobs:
       - name: Get go coverage on caller's main
         id: main-backend
         run: |
-          echo "::set-output name=coverage::$(./scripts/ci-code-coverage.sh false "${{steps.relevant-paths.outputs.backend-paths}}")"
-
+          PATHS=${{ steps.relevant-paths.outputs.backend-paths }}
+          ## Create directory for backend coverage output
+          mkdir backend_coverage
+          CMD=('go' 'test' '-coverprofile')
+          PLUGIN_COVERAGE=""
+          for i in "${!PATHS[@]}"; do
+              ## Identify plugin
+              PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+              echo "Running backend coverage check for: $PLUGIN"
+              FULL_CMD="${CMD[*]} backend_coverage/$PLUGIN.cov ./${PATHS[i]}"
+              ## This command generates the HTML report
+              HTML_CMD=('go' 'tool' 'cover' "-html=backend_coverage/$PLUGIN.cov" "-o backend_coverage/$PLUGIN.html")
+              RESULT=$($FULL_CMD)
+              $(${HTML_CMD[*]})
+              ## Retrieve coverage from result
+              PLUGIN_COVERAGE="$PLUGIN_COVERAGE$PLUGIN | $(echo $RESULT | cut -d ':' -f 2 | grep -Eo '[0-9]+\.[0-9]+') + "
+          done
+          echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
       - name: Get TypeScript coverage on caller's main
         id: main-frontend
         run: |
-          echo "::set-output name=coverage::$(./scripts/ci-code-coverage.sh true "${{steps.relevant-paths.outputs.frontend-paths}}")"
+          PATHS=${{ steps.relevant-paths.outputs.frontend-paths }}
+           ## Coverage paths are slightly differently formatted compared to test paths
+           COVERAGE_PATHS=""
+           declare -a TEST_PATHS=()
+           CMD=('jest' '--coverage' '--collectCoverageFrom=')
+           for i in "${!PATHS[@]}"; do
+               ## Identify which plugin path has been passed in
+               PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+               echo "Running frontend coverage check for: $PLUGIN"
+               ## If this is the last element do not append a comma
+               if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
+                   COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\","
+               else
+                   COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\""
+               fi
+               TEST_PATHS+=("--testPathPattern=\"${PATHS[i]}/*\"")
+           done
+           FULL_CMD="${CMD[*]}'[$COVERAGE_PATHS]' ${TEST_PATHS[*]}"
+           RESULT=$(yarn exec $FULL_CMD)
+
+           PLUGIN_COVERAGE=""
+           ## Set field delimiter so that we can easily split the path
+           IFS='/'
+           for i in "${!PATHS[@]}"; do
+               read -a splitpath <<<${PATHS[i]}
+               ## Retrive line coverage from result
+               PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
+           done
+           echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
 
       - name: Archive backend code coverage results
         uses: actions/upload-artifact@v3
@@ -70,8 +159,36 @@ jobs:
 
       - name: Create comments
         run: |
-          echo "backend-cov-comment=$(./scripts/ci-code-coverage-comment.sh false ${{ github.event.pull_request.number }} "${{steps.pr-backend.outputs.coverage}}" "${{steps.main-backend.outputs.coverage}}" )" >> $GITHUB_ENV
-          echo "frontend-cov-comment=$(./scripts/ci-code-coverage-comment.sh true ${{ github.event.pull_request.number }} "${{steps.pr-frontend.outputs.coverage}}" "${{steps.main-frontend.outputs.coverage}}" )" >> $GITHUB_ENV
+          IFS="+"
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          PR_FRONTEND_COVERAGE=(${{steps.pr-frontend.outputs.coverage})
+          PR_BACKEND_COVERAGE=(${{steps.pr-backend.outputs.coverage}})
+          MAIN_FRONTEND_COVERAGE=(${{steps.main-frontend.outputs.coverage}})
+          MAIN_BACKEND_COVERAGE=(${{steps.main-backend.outputs.coverage}})
+
+          COMMENT="code coverage report for PR #$PR_NUMBER\n| Plugin |          Main                       |   PR   | Difference |\n| ------ | ----------------------------------- | ------ | ---------- |\n"
+
+          generate_comment() {
+            PR_ARRAY=$1
+            MAIN_ARRAY=$2
+            for i in "${!PR_ARRAY[@]}"; do
+                CURR_PR_LINE=${PR_ARRAY[i]}
+                CURR_MAIN_LINE=${MAIN_ARRAY[i]}
+                PLUGIN=$(echo $CURR_PR_LINE | cut -d '|' -f 1 | xargs)
+                PR_COV=$(echo $CURR_PR_LINE | cut -d '|' -f 2 | xargs)
+                MAIN_COV=$(echo $CURR_MAIN_LINE | cut -d '|' -f 2 | xargs)
+                COMMENT="$COMMENT|  $PLUGIN |   $MAIN_COV%  |   $PR_COV%    |   $(bc <<<"$PR_COV - $MAIN_COV")% |\n"
+            done
+          }
+
+          echo "Creating frontend comment"
+          generate_comment $PR_FRONTEND_COVERAGE $MAIN_FRONTEND_COVERAGE
+          echo "frontend-cov-comment=$(echo -e "Frontend $COMMENT")" >> $GITHUB_ENV
+
+          echo "Creating backend comment"
+          generate_comment $PR_BACKEND_COVERAGE $MAIN_BACKEND_COVERAGE
+          echo -e "Backend $COMMENT"
+          echo "backend-cov-comment=$(echo -e "Backend $COMMENT")" >> $GITHUB_ENV
 
       - name: Find previous backend comment, if any
         uses: peter-evans/find-comment@v2
