Don't attempt to check empty paths

--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -45,55 +45,66 @@ jobs:
         id: pr-backend
         run: |
           PATHS=${{ steps.relevant-paths.outputs.backend-paths }}
-          ## Create directory for backend coverage output
-          mkdir backend_coverage
-          CMD=('go' 'test' '-coverprofile')
-          PLUGIN_COVERAGE=""
-          for i in "${!PATHS[@]}"; do
-              ## Identify plugin
-              PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
-              echo "Running backend coverage check for: $PLUGIN"
-              FULL_CMD="${CMD[*]} backend_coverage/$PLUGIN.cov ./${PATHS[i]}"
-              ## This command generates the HTML report
-              HTML_CMD=('go' 'tool' 'cover' "-html=backend_coverage/$PLUGIN.cov" "-o backend_coverage/$PLUGIN.html")
-              RESULT=$($FULL_CMD)
-              $(${HTML_CMD[*]})
-              ## Retrieve coverage from result
-              PLUGIN_COVERAGE="$PLUGIN_COVERAGE$PLUGIN | $(echo $RESULT | cut -d ':' -f 2 | grep -Eo '[0-9]+\.[0-9]+') + "
-          done
-          echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+          if [ -z "$PATHS" ]; then
+              echo "No backend paths to check"
+              exit 0
+          else
+              ## Create directory for backend coverage output
+              mkdir backend_coverage
+              CMD=('go' 'test' '-coverprofile')
+              PLUGIN_COVERAGE=""
+              for i in "${!PATHS[@]}"; do
+                  ## Identify plugin
+                  PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+                  echo "Running backend coverage check for: $PLUGIN"
+                  FULL_CMD="${CMD[*]} backend_coverage/$PLUGIN.cov ./${PATHS[i]}"
+                  ## This command generates the HTML report
+                  HTML_CMD=('go' 'tool' 'cover' "-html=backend_coverage/$PLUGIN.cov" "-o backend_coverage/$PLUGIN.html")
+                  RESULT=$($FULL_CMD)
+                  $(${HTML_CMD[*]})
+                  ## Retrieve coverage from result
+                  PLUGIN_COVERAGE="$PLUGIN_COVERAGE$PLUGIN | $(echo $RESULT | cut -d ':' -f 2 | grep -Eo '[0-9]+\.[0-9]+') + "
+              done
+              echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+          fi
+
       - name: Get TypeScript coverage for caller's PR
         id: pr-frontend
         run: |
           PATHS=${{ steps.relevant-paths.outputs.frontend-paths }}
-          ## Coverage paths are slightly differently formatted compared to test paths
-          COVERAGE_PATHS=""
-          declare -a TEST_PATHS=()
-          CMD=('jest' '--coverage' '--collectCoverageFrom=')
-          for i in "${!PATHS[@]}"; do
-              ## Identify which plugin path has been passed in
-              PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
-              echo "Running frontend coverage check for: $PLUGIN"
-              ## If this is the last element do not append a comma
-              if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
-                  COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\","
-              else
-                  COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\""
-              fi
-              TEST_PATHS+=("--testPathPattern=\"${PATHS[i]}/*\"")
-          done
-          FULL_CMD="${CMD[*]}'[$COVERAGE_PATHS]' ${TEST_PATHS[*]}"
-          RESULT=$(yarn exec $FULL_CMD)
+          if [ -z "$PATHS" ]; then
+              echo "No frontend paths to check"
+              exit 0
+          else
+              ## Coverage paths are slightly differently formatted compared to test paths
+              COVERAGE_PATHS=""
+              declare -a TEST_PATHS=()
+              CMD=('jest' '--coverage' '--collectCoverageFrom=')
+              for i in "${!PATHS[@]}"; do
+                  ## Identify which plugin path has been passed in
+                  PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+                  echo "Running frontend coverage check for: $PLUGIN"
+                  ## If this is the last element do not append a comma
+                  if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
+                      COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\","
+                  else
+                      COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\""
+                  fi
+                  TEST_PATHS+=("--testPathPattern=\"${PATHS[i]}/*\"")
+              done
+              FULL_CMD="${CMD[*]}'[$COVERAGE_PATHS]' ${TEST_PATHS[*]}"
+              RESULT=$(yarn exec $FULL_CMD)
 
-          PLUGIN_COVERAGE=""
-          ## Set field delimiter so that we can easily split the path
-          IFS='/'
-          for i in "${!PATHS[@]}"; do
-              read -a splitpath <<<${PATHS[i]}
-              ## Retrive line coverage from result
-              PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
-          done
-          echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+              PLUGIN_COVERAGE=""
+              ## Set field delimiter so that we can easily split the path
+              IFS='/'
+              for i in "${!PATHS[@]}"; do
+                  read -a splitpath <<<${PATHS[i]}
+                  ## Retrive line coverage from result
+                  PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
+              done
+              echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+          fi
 
       - uses: actions/checkout@v3
         with:
@@ -108,55 +119,65 @@ jobs:
         id: main-backend
         run: |
           PATHS=${{ steps.relevant-paths.outputs.backend-paths }}
-          ## Create directory for backend coverage output
-          mkdir backend_coverage
-          CMD=('go' 'test' '-coverprofile')
-          PLUGIN_COVERAGE=""
-          for i in "${!PATHS[@]}"; do
-              ## Identify plugin
-              PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
-              echo "Running backend coverage check for: $PLUGIN"
-              FULL_CMD="${CMD[*]} backend_coverage/$PLUGIN.cov ./${PATHS[i]}"
-              ## This command generates the HTML report
-              HTML_CMD=('go' 'tool' 'cover' "-html=backend_coverage/$PLUGIN.cov" "-o backend_coverage/$PLUGIN.html")
-              RESULT=$($FULL_CMD)
-              $(${HTML_CMD[*]})
-              ## Retrieve coverage from result
-              PLUGIN_COVERAGE="$PLUGIN_COVERAGE$PLUGIN | $(echo $RESULT | cut -d ':' -f 2 | grep -Eo '[0-9]+\.[0-9]+') + "
-          done
-          echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+          if [ -z "$PATHS" ]; then
+              echo "No backend paths to check"
+              exit 0
+          else
+              ## Create directory for backend coverage output
+              mkdir backend_coverage
+              CMD=('go' 'test' '-coverprofile')
+              PLUGIN_COVERAGE=""
+              for i in "${!PATHS[@]}"; do
+                  ## Identify plugin
+                  PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+                  echo "Running backend coverage check for: $PLUGIN"
+                  FULL_CMD="${CMD[*]} backend_coverage/$PLUGIN.cov ./${PATHS[i]}"
+                  ## This command generates the HTML report
+                  HTML_CMD=('go' 'tool' 'cover' "-html=backend_coverage/$PLUGIN.cov" "-o backend_coverage/$PLUGIN.html")
+                  RESULT=$($FULL_CMD)
+                  $(${HTML_CMD[*]})
+                  ## Retrieve coverage from result
+                  PLUGIN_COVERAGE="$PLUGIN_COVERAGE$PLUGIN | $(echo $RESULT | cut -d ':' -f 2 | grep -Eo '[0-9]+\.[0-9]+') + "
+              done
+              echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+          fi
       - name: Get TypeScript coverage on caller's main
         id: main-frontend
         run: |
           PATHS=${{ steps.relevant-paths.outputs.frontend-paths }}
-           ## Coverage paths are slightly differently formatted compared to test paths
-           COVERAGE_PATHS=""
-           declare -a TEST_PATHS=()
-           CMD=('jest' '--coverage' '--collectCoverageFrom=')
-           for i in "${!PATHS[@]}"; do
-               ## Identify which plugin path has been passed in
-               PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
-               echo "Running frontend coverage check for: $PLUGIN"
-               ## If this is the last element do not append a comma
-               if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
-                   COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\","
-               else
-                   COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\""
-               fi
-               TEST_PATHS+=("--testPathPattern=\"${PATHS[i]}/*\"")
-           done
-           FULL_CMD="${CMD[*]}'[$COVERAGE_PATHS]' ${TEST_PATHS[*]}"
-           RESULT=$(yarn exec $FULL_CMD)
+          if [ -z "$PATHS" ]; then
+              echo "No frontend paths to check"
+              exit 0
+          else
+              ## Coverage paths are slightly differently formatted compared to test paths
+              COVERAGE_PATHS=""
+              declare -a TEST_PATHS=()
+              CMD=('jest' '--coverage' '--collectCoverageFrom=')
+              for i in "${!PATHS[@]}"; do
+                  ## Identify which plugin path has been passed in
+                  PLUGIN=$(echo ${PATHS[i]} | awk -F '/' '{ print $NF }')
+                  echo "Running frontend coverage check for: $PLUGIN"
+                  ## If this is the last element do not append a comma
+                  if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
+                      COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\","
+                  else
+                      COVERAGE_PATHS="$COVERAGE_PATHS\"${PATHS[i]}/**\""
+                  fi
+                  TEST_PATHS+=("--testPathPattern=\"${PATHS[i]}/*\"")
+              done
+              FULL_CMD="${CMD[*]}'[$COVERAGE_PATHS]' ${TEST_PATHS[*]}"
+              RESULT=$(yarn exec $FULL_CMD)
 
-           PLUGIN_COVERAGE=""
-           ## Set field delimiter so that we can easily split the path
-           IFS='/'
-           for i in "${!PATHS[@]}"; do
-               read -a splitpath <<<${PATHS[i]}
-               ## Retrive line coverage from result
-               PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
-           done
-           echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+              PLUGIN_COVERAGE=""
+              ## Set field delimiter so that we can easily split the path
+              IFS='/'
+              for i in "${!PATHS[@]}"; do
+                  read -a splitpath <<<${PATHS[i]}
+                  ## Retrive line coverage from result
+                  PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
+              done
+              echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
+          fi
 
       - name: Archive backend code coverage results
         uses: actions/upload-artifact@v3
