--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -174,7 +174,11 @@ jobs:
               for i in "${!PATHS[@]}"; do
                   read -a splitpath <<<${PATHS[i]}
                   ## Retrive line coverage from result
-                  PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
+                  if [ $i -lt $((${#PATHS[@]} - 1)) ]; then
+                      PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5) + "
+                  else
+                      PLUGIN_COVERAGE="$PLUGIN_COVERAGE$(echo $RESULT | grep ${splitpath[-1]} | head -1 | cut -d '|' -f 1,5)"
+                  fi
               done
               echo "::set-output name=coverage::$(echo -e $PLUGIN_COVERAGE)"
           fi
@@ -200,9 +204,9 @@ jobs:
           MAIN_FRONTEND_COVERAGE=("${{ steps.main-frontend.outputs.coverage }}")
           MAIN_BACKEND_COVERAGE=("${{ steps.main-backend.outputs.coverage }}")
 
-          COMMENT="code coverage report for PR #$PR_NUMBER\n
-          | Plugin |          Main                       |   PR   | Difference |\n
-          | ------ | ----------------------------------- | ------ | ---------- |\n"
+          COMMENT="code coverage report for PR #$PR_NUMBER
+          | Plugin |          Main                       |   PR   | Difference |
+          | ------ | ----------------------------------- | ------ | ---------- |"
 
           generate_comment() {
             if [ "$1" == "frontend" ]; then
@@ -219,8 +223,14 @@ jobs:
                 PLUGIN=$(echo $CURR_PR_LINE | cut -d '|' -f 1 | xargs)
                 PR_COV=$(echo $CURR_PR_LINE | cut -d '|' -f 2 | xargs)
                 MAIN_COV=$(echo $CURR_MAIN_LINE | cut -d '|' -f 2 | xargs)
-                COMMENT="$COMMENT|  $PLUGIN |   $MAIN_COV%  |   $PR_COV%    |   $(bc <<<"$PR_COV - $MAIN_COV")% |\n"
+                COMMENT="$COMMENT
+                |  $PLUGIN |   $MAIN_COV%  |   $PR_COV%    |   $(bc <<<"$PR_COV - $MAIN_COV")% |"
             done
+
+            if [ ${#PR_ARRAY[@]} -eq 0 ]; then
+              COMMENT=" - no changes"
+            fi
+            
             COMMENT="${COMMENT//'%'/'%25'}"
             COMMENT="${COMMENT//$'\n'/'%0A'}"
             COMMENT="${COMMENT//$'\r'/'%0D'}"
@@ -232,9 +242,9 @@ jobs:
           echo $COMMENT
           echo "::set-output name=frontend-comment::$COMMENT"
 
-          COMMENT="code coverage report for PR #$PR_NUMBER\n
-          | Plugin |          Main                       |   PR   | Difference |\n
-          | ------ | ----------------------------------- | ------ | ---------- |\n"
+          COMMENT="code coverage report for PR #$PR_NUMBER
+          | Plugin |          Main                       |   PR   | Difference |
+          | ------ | ----------------------------------- | ------ | ---------- |"
 
           echo "Creating backend comment"
           generate_comment backend
